2010-03-16  Chris Dunlap  <cdunlap@llnl.gov>

	* PLATFORMS: Updated.

	* README: Added license info.

2010-03-15  Chris Dunlap  <cdunlap@llnl.gov>

	* config/x_ac_select_auth_method.m4: Tweaked platform comment for
	  AUTH_METHOD_LOCAL_PEERCRED.

2010-03-11  Chris Dunlap  <cdunlap@llnl.gov>

	* configure.ac: Tweaked formatting.

	* config/x_ac_select_auth_method.m4: Tweaked platform comment for
	  AUTH_METHOD_LOCAL_PEERCRED.

	* config/x_ac_select_auth_method.m4: Fixed check for struct xucred to
	  work on FreeBSD-4.7 with the addition of <sys/param.h> and
	  <sys/types.h>.

2010-03-10  Chris Dunlap  <cdunlap@llnl.gov>

	* config/x_ac_check_fifo_recvfd.m4, config/x_ac_check_so_peercred.m4:
	  Tweaked formatting.

	* configure.ac: Fixed check for socklen_t to work on FreeBSD-4.7 with
	  the addition of <sys/types.h>.
	* config/x_ac_check_local_peercred.m4, src/munged/auth_recv.c:
	  Added <sys/un.h> for LOCAL_PEERCRED define on FreeBSD-4.7.
	  Added <sys/param.h> for NGROUPS on FreeBSD-4.7 (needed for ucred.h).
	  Note that, by default, AUTH_METHOD_GETPEEREID is selected on FreeBSD;
	  however, AUTH_METHOD_LOCAL_PEERCRED also works there since supposedly
	  its getpeereid() is implemented via LOCAL_PEERCRED.

2010-03-09  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/munged.c, src/munged/job.c: Changed type of global "done"
	  signal handler flag to volatile sig_atomic_t.  Moved exit_handler()'s
	  log_msg() call outside of signal handler and into job_accept().

2010-03-08  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/munge.init.in: Added stanza to service_start() to create
	  /var/run/munge dir if needed.  Fixes bug on Debian/Ubuntu when RAMRUN
	  is enabled.

2010-03-02  Chris Dunlap  <cdunlap@llnl.gov>

	* config/x_ac_select_auth_method.m4: Tweaked whitespace.

	* : Changed license from GPLv2+ to GPLv3+/LGPLv3+.

2010-02-11  Chris Dunlap  <cdunlap@llnl.gov>

	* config/x_ac_debug.m4: Tweaked AC_MSG_RESULT text on failure.

	* config/x_ac_select_crypto_lib.m4: