@@ -1,3 +1,11 @@
+2010-03-23  Chris Dunlap  <cdunlap@llnl.gov>
+
+	* Makefile.am, src/Makefile.am, src/etc/Makefile.am,
+	  src/libcommon/Makefile.am, src/libmissing/Makefile.am,
+	  src/libmunge/Makefile.am, src/munge/Makefile.am,
+	  src/munged/Makefile.am, config/Make-inc.mk:
+	  Added copyleft boilerplate.
+
 2010-03-16  Chris Dunlap  <cdunlap@llnl.gov>
 
 	* PLATFORMS: Updated.
